# audio_buffer

./: Cargo.toml  build.rs
src/: core.rs  data_modification.rs  data_modification_u.rs  lib.rs  mixing.rs  mixing_u.rs  resampling.rs  resampling_u.rs  trimming.rs  trimming_u.rs  wav_parser.rs
src/effect/: effect.rs  effect_settings.rs  effect_settings_generated.rs  mod.rs
src/effect/effects/: amplifier.rs  amplifier_u.rs  mod.rs  noise_gate.rs  noise_gate_u.rs
src/effects/: amplifier.rs  amplifier_u.rs  mod.rs
src/wav_parser/: mod.rs  wav_parser.rs  wav_parser_u.rs
